# mcutt

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
assets/broker/: Dockerfile  docker-compose.yaml
assets/broker/config/: mosquitto.conf
benches/: publish.rs
examples/sync/: main.rs
examples/sync-receiver/: main.rs
examples/sync-sender/: main.rs
scripts/: coverage.sh
snapshots/: mcutt__tests__use_macro.snap  mcutt__v3__packets__disconnect__tests__disconnect_roundtrip.snap  mcutt__v3__packets__ping__resp__tests__should_encode_and_decode_pingresp.snap  mcutt__v3__packets__ping__tests__should_encode_and_decode_pingreq.snap  mcutt__v3__packets__publish__ack__tests__puback_roundtrip.snap  mcutt__v3__packets__publish__comp__tests__puback_roundtrip.snap  mcutt__v3__packets__publish__comp__tests__pubcomp_roundtrip.snap  mcutt__v3__packets__publish__rec__tests__pubrec_roundtrip.snap  mcutt__v3__packets__publish__rel__tests__pubrec_roundtrip.snap  mcutt__v3__packets__publish__tests__should_encode_and_decode_publish.snap  mcutt__v3__packets__subscribe__ack__tests__suback_roundtrip.snap  mcutt__v3__packets__subscribe__tests__subscribe_roundtrip.snap  mcutt__v3__packets__unsubscribe__ack__tests__unsuback_roundtrip.snap  mcutt__v3__packets__unsubscribe__tests__unsubscribe_roundtrip.snap
src/: bytes.rs  lib.rs  memory.rs  packet.rs  slab.rs  sync.rs
src/sync/: mod.rs
src/sync/socket/: mod.rs  reader.rs
src/v3/: bytes.rs  client.rs  connect.rs  disconnect.rs  header.rs  mod.rs  packet.rs  ping.rs  read_write.rs  sync.rs  traits.rs
src/v3/header/: mod.rs  remaining_length.rs
src/v3/packet/: connect.rs  disconnect.rs  mod.rs  packet.rs
src/v3/packet/publish/: mod.rs
src/v3/packet/subscribe/: mod.rs
src/v3/packets/: connect.rs  disconnect.rs  mod.rs  packet.rs  ping.rs
src/v3/packets/common/: message.rs  mod.rs  packet_id.rs  string.rs  topic.rs
src/v3/packets/common/fixed/: builder.rs  mod.rs  remaining_length.rs
src/v3/packets/connect/: ack.rs  builder.rs  mod.rs
src/v3/packets/header/: alloc.rs  mod.rs  remaining_length.rs
src/v3/packets/ping/: mod.rs  resp.rs
src/v3/packets/publish/: ack.rs  alloc.rs  builder.rs  comp.rs  mod.rs  rec.rs  rel.rs
src/v3/packets/subscribe/: ack.rs  builder.rs  iter.rs  mod.rs  topic.rs
src/v3/packets/unsubscribe/: ack.rs  builder.rs  iter.rs  mod.rs
src/v3/publish/: alloc.rs  mod.rs
src/v3/subscribe/: alloc.rs  iter.rs  mod.rs
src/v3/unsubscribe/: alloc.rs  iter.rs  mod.rs
