[package]
name = "mcutt"
version = "0.1.0-init1"
categories = [
  "asynchronous",
  "embedded",
  "network-programming",
] # some day no_std and no-std::no-alloc
edition = "2021"
keywords = ["mqtt", "iot", "networking"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshuachp/mcutt"
rust-version = "1.72.0"
description = "mcutt is a simple and transport agnostic MQTT v3.1 client library"

[dependencies]
bitflags = "2.0.0"
tracing = { version = "0.1.13", default-features = false, optional = true, features = ["attributes"] }

[features]
default = ["sync"]
alloc = ["dep:tracing"]
std = ["alloc", "tracing/std"]
sync = ["std"]

[dev-dependencies]
color-eyre = "0.6.3"
pretty_assertions = "1.4.0"
tracing-subscriber = "0.3.18"
