[package]
name = "mcutt"
version = "0.1.0-init1"
categories = [
  "asynchronous",
  "embedded",
  "network-programming",
] # some day no_std and no-std::no-alloc
edition = "2021"
keywords = ["mqtt", "iot", "networking"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshuachp/mcutt"
rust-version = "1.72.0"
description = "mcutt is a simple and transport agnostic MQTT v3.1 client library"

[dependencies]
bitflags = "2.0.0"
fnv = { version = "1.0.7", optional = true }
memchr = { version = "2.7.4", default-features = false }
tracing = { version = "0.1.23", default-features = false, optional = true, features = ["attributes"] }

[features]
default = ["sync"]
alloc = ["dep:tracing", "memchr/alloc"]
std = ["alloc", "tracing/std", "memchr/std"]
sync = ["std", "dep:fnv"]

[dev-dependencies]
color-eyre = "0.6.3"
pretty_assertions = "1.4.1"
tracing-subscriber = "0.3.18"
