[package]
name = "mcutt"
version = "0.1.0-init1"
categories = [
    "asynchronous",
    "embedded",
    "network-programming",
] # some day no_std and no-std::no-alloc
edition = "2024"
keywords = ["mqtt", "iot", "networking"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshuachp/mcutt"
rust-version = "1.88"
description = "mcutt is a simple and transport agnostic MQTT v3.1 client library"

[features]
default = ["sync"]
# Enable the std and deps alloc features
alloc = ["dep:tracing", "memchr/alloc", "zerocopy/alloc"]
# Enable the std system features
std = ["alloc", "tracing/std", "memchr/std", "zerocopy/std"]
# Enables the std sync client using the std lib sockets
sync = ["std", "dep:mio"]

[dependencies]
bitflags = "2.10.0"
memchr = { version = "2.7.6", default-features = false }
mio = { version = "1.1.1", optional = true, features = ["os-poll", "net"] }
tracing = { version = "0.1.41", default-features = false, optional = true, features = ["attributes"] }
zerocopy = { version = "0.8.27", features = ["derive"] }
zerocopy-derive = "0.8.27"

[dev-dependencies]
color-eyre = "0.6.5"
criterion = "0.8.2"
eyre = "0.6.12"
insta = "1.46.1"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tracing-subscriber = "0.3.20"

[[bench]]
name = "publish"
harness = false
